# agentic-framework

./: README.md  package-lock.json  package.json  tsconfig.base.json
examples/: minimal.ts  package.json
python/: pyproject.toml
python/src/agent_framework/: __init__.py  agent.py  checkpoint.py  executor.py  hitl.py  llm.py  memory.py  observability.py  openai_adapter.py  task.py  thread.py  tool.py  tools_registry.py
python/src/agent_framework/crew/: __init__.py  bus_in_memory.py  crew_orchestrator.py  message_bus.py  models.py
python/src/agent_framework/enterprise/: __init__.py  audit.py  audit_console.py  policy.py  policy_in_memory.py  quota.py  quota_in_memory.py  secrets.py  secrets_env.py
python/src/agent_framework/memory_store/: __init__.py  in_memory.py  redis_store.py
python/src/agent_framework/rag/: __init__.py  connector.py  reranker.py  retriever.py  types.py  vector_store.py
python/src/agent_framework/rag/stores/: __init__.py  in_memory.py
python/src/agent_framework/runtime/: __init__.py  checkpointer_memory.py  graph.py  runtime.py
